# ugractf-2023-quals

./: .gitattributes  LICENSE  README.md  SCOREBOARD.md  module.nix
tasks/_scripts/: kyzylborda-lib-generator  kyzylborda-lib-quarantine-daemon
tasks/bookkeeping/: README.md  WRITEUP.md  bookkeeping.yaml  generator.py  requirements.txt
tasks/capture/: README.md  WRITEUP.md  capture.yaml  generate.py  solve.sh
tasks/collateral/: README.md  WRITEUP.md  collateral.yaml
tasks/crypdle/: Dockerfile.generator  README.md  WRITEUP.md  crypdle.c  crypdle.yaml  generator.py  solution.py
tasks/cryptoneliner/: Dockerfile.generator  README.md  WRITEUP.md  cryptoneliner.yaml  decoder.sh  generate.py  message_template  oneliner.sh  solve.sh
tasks/depth/: README.md  WRITEUP.md  depth.yaml
tasks/ecipher/: Dockerfile.generator  README.md  WRITEUP.md  cipher_orig.el  decipher.py  ecipher.yaml  generate.sh  text.txt
tasks/elementary/: README.md  WRITEUP.md  elementary.yaml  generator.py  template.py
tasks/espionage/: Dockerfile.generator  README.md  WRITEUP.md  espionage.yaml  generator.py  requirements.txt
tasks/goodolddays/: Dockerfile.admin  (+5 more)
tasks/thevillage2/app/: Dockerfile  docker-compose.yml  pyproject.toml
tasks/thevillage2/app/villageblog/: app.py  base.py  routes.py
tasks/thevillage2/app/villageblog/static/: .gitattributes  feed.xml  paris.js  sitemap.xml  style.css  styles.html
tasks/thevillage2/app/villageblog/static/js/: adhell.js  paywall.js  snowflakes.js
tasks/thevillage2/app/villageblog/templates/: base.html  index.html  post.html  subscribe.html
(+176 files in other folders)
